--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
     "inquirer": "^7.3.3",
     "jest": "^26.2.2"
   },
